Fixed several references

--- a/source/bibliography/bib/Al_Sarar_2006.bib
+++ b/source/bibliography/bib/Al_Sarar_2006.bib
@@ -1,6 +1,6 @@
 @article{Al_Sarar_2006,
  author = {Al-Sarar, Ali and Hall, Franklin R and Downer, Roger A},
- title = {Impact of spray application methodology on the development of resistance to cypermethrin and spinosad by fall {armywormSpodoptera} frugiperda ({JE} Smith)},
+ title = {Impact of spray application methodology on the development of resistance to cypermethrin and spinosad by fall armyworm Spodoptera frugiperda (JE Smith)},
  journal = {Pest Management Science},
  publisher = {Wiley},
  year = {2006},
