--- a/source/bibliography/bib/Ardisson_Ara_jo_2015.bib
+++ b/source/bibliography/bib/Ardisson_Ara_jo_2015.bib
@@ -1,6 +1,6 @@
 @article{Ardisson_Ara_jo_2015,
  author = {Ardisson-Ara{\'{u}}jo, Daniel M. P. and Melo, Fernando L. and Clem, Rollie J. and Wolff, Jos{\'{e}} L. C. and Ribeiro, Bergmann M.},
- title = {A Betabaculovirus-Encodedgp64Homolog Codes for a Functional Envelope Fusion Protein},
+ title = {A Betabaculovirus-Encoded gp64 Homolog Codes for a Functional Envelope Fusion Protein},
  journal = {Journal of Virology},
  publisher = {American Society for Microbiology},
  year = {2015},
