--- a/source/bibliography/bib/Bentivenha_2018.bib
+++ b/source/bibliography/bib/Bentivenha_2018.bib
@@ -1,6 +1,6 @@
 @article{Bentivenha_2018,
  author = {Bentivenha, Jos{\'{e}} P F and Rodrigues, Juliana G and Lima, Marcelo F and Mar{\c{c}}on, Paula and Popham, Holly J R and Omoto, Celso},
- title = {Baseline Susceptibility {ofSpodoptera} frugiperda(Lepidoptera: Noctuidae) to {SfMNPV} and Evaluation of Cross-Resistance to Major Insecticides and Bt Proteins},
+ title = {Baseline Susceptibility of Spodoptera frugiperda (Lepidoptera: Noctuidae) to SfMNPV and Evaluation of Cross-Resistance to Major Insecticides and Bt Proteins},
  journal = {Journal of Economic Entomology},
  publisher = {Oxford University Press ({OUP})},
  year = {2018},
