--- a/source/bibliography/bib/Berretta_1998.bib
+++ b/source/bibliography/bib/Berretta_1998.bib
@@ -1,6 +1,6 @@
 @article{Berretta_1998,
  author = {Berretta, Marcelo F and Rios, Marta L and de Cap, Alicia Sciocco},
- title = {Characterization of a Nuclear Polyhedrosis Virus {ofSpodoptera} frugiperdafrom Argentina},
+ title = {Characterization of a Nuclear Polyhedrosis Virus of Spodoptera frugiperda from Argentina},
  journal = {Journal of Invertebrate Pathology},
  publisher = {Elsevier {BV}},
  year = {1998},
