--- a/source/bibliography/bib/Berretta_2013.bib
+++ b/source/bibliography/bib/Berretta_2013.bib
@@ -1,5 +1,5 @@
 @incollection{F__2013,
- author = {F., Marcelo and Leticia, M. and Salvador, Ricardo and Sciocco, Alicia and Romanowski, Vctor},
+ author = {Berretta, Facundo Marcelo and Ferrelli, Maria Leticia and Salvador, Ricardo and Sciocco-Cap, Alicia and Romanowski, Victor},
  title = {Baculovirus Gene Expression},
  publisher = {{InTech}},
  year = {2013},
