--- a/source/bibliography/bib/Biedma_2009.bib
+++ b/source/bibliography/bib/Biedma_2009.bib
@@ -1,5 +1,5 @@
-@phdthesis{1,
- author = {Biedma, and Marina Elizabeth},
+@phdthesis{Biedma_2009,
+ author = {Biedma, Marina Elizabeth},
  title = {Desarrollo de un sistema de recombinaci{\'{o}}n para su aplicaci{\'{o}}n al estudio de determinantes gen{\'{e}}ticos que afectan la infectividad de baculovirus de inter{\'{e}}s agron{\'{o}}mico},
  publisher = {Universidad Nacional de La Plata},
  url = {https://doi.org/10.35537%2F10915%2F90015},
