--- a/source/bibliography/bib/Bolzan_2019.bib
+++ b/source/bibliography/bib/Bolzan_2019.bib
@@ -1,6 +1,6 @@
 @article{Bolzan_2019,
  author = {Bolzan, Anderson and Padovez, Fernando EO and Nascimento, Antonio RB and Kaiser, Ingrid S and Lira, Ewerton C and Amaral, Fernando SA and Kanno, Rubens H and Malaquias, Jos{\'{e}} B and Omoto, Celso},
- title = {Selection and characterization of the inheritance of resistance {ofSpodoptera} frugiperda(Lepidoptera: Noctuidae) to chlorantraniliprole and cross-resistance to other diamide insecticides},
+ title = {Selection and characterization of the inheritance of resistance of Spodoptera frugiperda (Lepidoptera: Noctuidae) to chlorantraniliprole and cross-resistance to other diamide insecticides},
  journal = {Pest Management Science},
  publisher = {Wiley},
  year = {2019},
