--- a/source/bibliography/bib/Brito_2015.bib
+++ b/source/bibliography/bib/Brito_2015.bib
@@ -1,6 +1,6 @@
 @article{Brito_2015,
  author = {de Brito, Anderson Fernandes and Braconi, Carla Torres and Weidmann, Manfred and Dilcher, Meik and Alves, Jo{\~{a}}o Marcelo Pereira and Gruber, Arthur and Andrade Zanotto, Paolo Marinho de},
- title = {The Pangenome of {theAnticarsia} {gemmatalisMultiple} Nucleopolyhedrovirus ({AgMNPV})},
+ title = {The Pangenome of the Anticarsia gemmatalis Multiple Nucleopolyhedrovirus (AgMNPV)},
  journal = {Genome Biology and Evolution},
  publisher = {Oxford University Press ({OUP})},
  year = {2015},
