--- a/source/bibliography/bib/Ferrelli_2012a.bib
+++ b/source/bibliography/bib/Ferrelli_2012a.bib
@@ -1,5 +1,5 @@
 @incollection{Leticia_2012,
- author = {Leticia, M. and F., Marcelo and N., Mariano and Daniel, P. and Sciocco-Cap, Alicia and Romanowski, Vctor},
+ author = {Ferrelli, M. Leticia and Berretta, F. Marcelo and Bellaich, Mariano and Ghringhelli, Daniel P. and Sciocco-Cap, Alicia and Romanowski, Vctor},
  title = {The Baculoviral Genome},
  publisher = {{InTech}},
  year = {2012},
