--- a/source/bibliography/bib/Hill_2020.bib
+++ b/source/bibliography/bib/Hill_2020.bib
@@ -1,6 +1,7 @@
 @article{Hill_2020,
  author = {Hill, Tom and Unckless, Robert L.},
- title = {Recurrent evolution of two competing haplotypes in an insect {DNA} virus},
+ title = {Recurrent evolution of two competing haplotypes in an insect DNA virus},
+ journal = {BioRxiv},
  publisher = {Cold Spring Harbor Laboratory},
  year = {2020},
  month = {may},
