--- a/source/bibliography/bib/Montezano_2018.bib
+++ b/source/bibliography/bib/Montezano_2018.bib
@@ -1,6 +1,6 @@
 @article{Montezano_2018,
  author = {Montezano, D. G. and Specht, A. and Sosa-G{\'{o}}mez, D. R. and Roque-Specht, V. F. and Sousa-Silva, J. C. and Paula-Moraes, S. V. and Peterson, J. A. and Hunt, T. E.},
- title = {Host Plants {ofSpodoptera} frugiperda(Lepidoptera: Noctuidae) in the Americas},
+ title = {Host Plants of Spodoptera frugiperda (Lepidoptera: Noctuidae) in the Americas},
  journal = {African Entomology},
  publisher = {Entomological Society of Southern Africa},
  year = {2018},
