--- a/source/bibliography/bib/Moscardi_1999.bib
+++ b/source/bibliography/bib/Moscardi_1999.bib
@@ -1,6 +1,6 @@
 @article{Moscardi_1999,
- author = {Moscardi, Fl{\'{a}}vio},
- title = {{ASSESSMENT} {OF} {THE} {APPLICATION} {OF} {BACULOVIRUSES} {FOR} {CONTROL} {OF} {LEPIDOPTERA}},
+ author = {Moscardi, Flavio},
+ title = {ASSESSMENT OF THE APPLICATION OF BACULOVIRUSES FOR CONTROL OF LEPIDOPTERA},
  journal = {Annual Review of Entomology},
  publisher = {Annual Reviews},
  year = {1999},
