--- a/source/bibliography/bib/Sciocco_Cap_2001.bib
+++ b/source/bibliography/bib/Sciocco_Cap_2001.bib
@@ -1,5 +1,5 @@
 @article{Sciocco_Cap_2001,
- author = {Sciocco-Cap, Alicia and Parola, Alejandro D. and Goldberg, Alina V. and Ghiringhelli, Pablo D. and Romanowski, V{\i}{\'}ctor},
+ author = {Sciocco-Cap, Alicia and Parola, Alejandro D. and Goldberg, Alina V. and Ghiringhelli, Pablo D. and Romanowski, Victor},
  title = {Characterization of a Granulovirus Isolated from Epinotia aporema Wals. (Lepidoptera: Tortricidae) Larvae},
  journal = {Applied and Environmental Microbiology},
  publisher = {American Society for Microbiology},
