--- a/source/bibliography/bib/Wang_2011.bib
+++ b/source/bibliography/bib/Wang_2011.bib
@@ -1,6 +1,6 @@
 @article{Wang_2011,
  author = {Wang, Xiao-Feng and Zhang, Bao-Qin and Xu, Hai-Jun and Cui, Ying-Jun and Xu, Yi-Peng and Zhang, Min-Juan and Han, Yeon Soo and Lee, Yong Seok and Bao, Yan-Yuan and Zhang, Chuan-Xi},
- title = {{ODV}-Associated Proteins of {thePieris} {rapaeGranulovirus}},
+ title = {ODV-Associated Proteins of the Pieris rapaeGranulovirus},
  journal = {Journal of Proteome Research},
  publisher = {American Chemical Society ({ACS})},
  year = {2011},
