--- a/source/references.bib
+++ b/source/references.bib
@@ -1,19 +1,3 @@
-@phdthesis{1,
- author = {Biedma, and Marina Elizabeth},
- title = {Desarrollo de un sistema de recombinación para su aplicación al estudio de determinantes genéticos que afectan la infectividad de baculovirus de interés agronómico},
- publisher = {Universidad Nacional de La Plata},
- url = {https://doi.org/10.35537%2F10915%2F90015},
- doi = {10.35537/10915/90015}
-}
-
-@phdthesis{1a,
- author = {Haase, and Santiago},
- title = {Desarrollo de herramientas moleculares para incrementar la aplicabilidad del baculovirus de $łess$i$\greater$Anticarsia gemmatalis$łess$/i$\greater$ en el control biológico de plagas},
- publisher = {Universidad Nacional de La Plata},
- url = {https://doi.org/10.35537%2F10915%2F48298},
- doi = {10.35537/10915/48298}
-}
-
 @article{_nce_2010,
  author = {{\.{I}}nce, {\. {I}}kbal Agah and Boeren, Sjef A. and van Oers, Monique M. and Vervoort, Jacques J. M. and Vlak, Just M.},
  title = {Proteomic analysis of Chilo iridescent virus},
@@ -44,7 +28,7 @@
 
 @article{Al_Sarar_2006,
  author = {Al-Sarar, Ali and Hall, Franklin R and Downer, Roger A},
- title = {Impact of spray application methodology on the development of resistance to cypermethrin and spinosad by fall {armywormSpodoptera} frugiperda ({JE} Smith)},
+ title = {Impact of spray application methodology on the development of resistance to cypermethrin and spinosad by fall armyworm Spodoptera frugiperda (JE Smith)},
  journal = {Pest Management Science},
  publisher = {Wiley},
  year = {2006},
@@ -113,8 +97,8 @@
 }
 
 @article{Ardisson_Ara_jo_2015,
- author = {Ardisson-Araújo, Daniel M. P. and Melo, Fernando L. and Clem, Rollie J. and Wolff, José L. C. and Ribeiro, Bergmann M.},
- title = {A Betabaculovirus-Encodedgp64Homolog Codes for a Functional Envelope Fusion Protein},
+ author = {Ardisson-Ara{\'{u}}jo, Daniel M. P. and Melo, Fernando L. and Clem, Rollie J. and Wolff, Jos{\'{e}} L. C. and Ribeiro, Bergmann M.},
+ title = {A Betabaculovirus-Encoded gp64 Homolog Codes for a Functional Envelope Fusion Protein},
  journal = {Journal of Virology},
  publisher = {American Society for Microbiology},
  year = {2015},
@@ -210,10 +194,10 @@
 }
 
 @article{Bentivenha_2018,
- author = {Bentivenha, José P F and Rodrigues, Juliana G and Lima, Marcelo F and Marçon, Paula and Popham, Holly J R and Omoto, Celso},
- title = {Baseline Susceptibility ofSpodoptera frugiperda(Lepidoptera: Noctuidae) to SfMNPV and Evaluation of Cross-Resistance to Major Insecticides and Bt Proteins},
+ author = {Bentivenha, Jos{\'{e}} P F and Rodrigues, Juliana G and Lima, Marcelo F and Mar{\c{c}}on, Paula and Popham, Holly J R and Omoto, Celso},
+ title = {Baseline Susceptibility of Spodoptera frugiperda (Lepidoptera: Noctuidae) to SfMNPV and Evaluation of Cross-Resistance to Major Insecticides and Bt Proteins},
  journal = {Journal of Economic Entomology},
- publisher = {Oxford University Press (OUP)},
+ publisher = {Oxford University Press ({OUP})},
  year = {2018},
  month = {nov},
  number = {1},
@@ -267,9 +251,9 @@
 
 @article{Berretta_1998,
  author = {Berretta, Marcelo F and Rios, Marta L and de Cap, Alicia Sciocco},
- title = {Characterization of a Nuclear Polyhedrosis Virus ofSpodoptera frugiperdafrom Argentina},
+ title = {Characterization of a Nuclear Polyhedrosis Virus of Spodoptera frugiperda from Argentina},
  journal = {Journal of Invertebrate Pathology},
- publisher = {Elsevier BV},
+ publisher = {Elsevier {BV}},
  year = {1998},
  month = {may},
  number = {3},
@@ -277,6 +261,25 @@
  pages = {280--282},
  url = {https://doi.org/10.1006%2Fjipa.1997.4731},
  doi = {10.1006/jipa.1997.4731}
+}
+
+@incollection{Berretta_2013,
+ author = {Berretta, Facundo Marcelo and Ferrelli, Maria Leticia and Salvador, Ricardo and Sciocco-Cap, Alicia and Romanowski, Victor},
+ title = {Baculovirus Gene Expression},
+ publisher = {{InTech}},
+ year = {2013},
+ month = {nov},
+ url = {https://doi.org/10.5772%2F56955},
+ doi = {10.5772/56955},
+ booktitle = {Current Issues in Molecular Virology - Viral Genetics and Biotechnological Applications}
+}
+
+@phdthesis{Biedma_2009,
+ author = {Biedma, Marina Elizabeth},
+ title = {Desarrollo de un sistema de recombinaci{\'{o}}n para su aplicaci{\'{o}}n al estudio de determinantes gen{\'{e}}ticos que afectan la infectividad de baculovirus de inter{\'{e}}s agron{\'{o}}mico},
+ publisher = {Universidad Nacional de La Plata},
+ url = {https://doi.org/10.35537%2F10915%2F90015},
+ doi = {10.35537/10915/90015}
 }
 
 @article{Blissard_2018,
@@ -295,7 +298,7 @@
 
 @article{Bolzan_2019,
  author = {Bolzan, Anderson and Padovez, Fernando EO and Nascimento, Antonio RB and Kaiser, Ingrid S and Lira, Ewerton C and Amaral, Fernando SA and Kanno, Rubens H and Malaquias, Jos{\'{e}} B and Omoto, Celso},
- title = {Selection and characterization of the inheritance of resistance {ofSpodoptera} frugiperda(Lepidoptera: Noctuidae) to chlorantraniliprole and cross-resistance to other diamide insecticides},
+ title = {Selection and characterization of the inheritance of resistance of Spodoptera frugiperda (Lepidoptera: Noctuidae) to chlorantraniliprole and cross-resistance to other diamide insecticides},
  journal = {Pest Management Science},
  publisher = {Wiley},
  year = {2019},
@@ -392,10 +395,10 @@
 }
 
 @article{Brito_2015,
- author = {de Brito, Anderson Fernandes and Braconi, Carla Torres and Weidmann, Manfred and Dilcher, Meik and Alves, João Marcelo Pereira and Gruber, Arthur and Andrade Zanotto, Paolo Marinho de},
- title = {The Pangenome of theAnticarsia gemmatalisMultiple Nucleopolyhedrovirus (AgMNPV)},
+ author = {de Brito, Anderson Fernandes and Braconi, Carla Torres and Weidmann, Manfred and Dilcher, Meik and Alves, Jo{\~{a}}o Marcelo Pereira and Gruber, Arthur and de Andrade Zanotto, Paolo Marinho},
+ title = {The Pangenome of the Anticarsia gemmatalis Multiple Nucleopolyhedrovirus (AgMNPV)},
  journal = {Genome Biology and Evolution},
- publisher = {Oxford University Press (OUP)},
+ publisher = {Oxford University Press ({OUP})},
  year = {2015},
  month = {nov},
  number = {1},
@@ -518,8 +521,8 @@
 }
 
 @article{Clavijo_2009,
- author = {Clavijo, Gabriel and Williams, Trevor and Simoń, Oihane and Muñoz, Delia and Cerutti, Martine and Loṕez-Ferber, Miguel and Caballero, Primitivo},
- title = {Mixtures of Complete and pif1- and pif2-Deficient Genotypes Are Required for Increased Potency of an Insect Nucleopolyhedrovirus},
+ author = {Clavijo, Gabriel and Williams, Trevor and Simo{\'}n, Oihane and Mun{\~}oz, Delia and Cerutti, Martine and Lo{\'}pez-Ferber, Miguel and Caballero, Primitivo},
+ title = {Mixtures of Complete and pif1- and pif2- Deficient Genotypes Are Required for Increased Potency of an Insect Nucleopolyhedrovirus},
  journal = {Journal of Virology},
  publisher = {American Society for Microbiology},
  year = {2009},
@@ -726,17 +729,6 @@
  doi = {10.1099/vir.0.81792-0}
 }
 
-@incollection{F__2013,
- author = {F., Marcelo and Leticia, M. and Salvador, Ricardo and Sciocco, Alicia and Romanowski, Vctor},
- title = {Baculovirus Gene Expression},
- publisher = {InTech},
- year = {2013},
- month = {nov},
- url = {https://doi.org/10.5772%2F56955},
- doi = {10.5772/56955},
- booktitle = {Current Issues in Molecular Virology - Viral Genetics and Biotechnological Applications}
-}
-
 @article{Ferrelli_2012,
  author = {Ferrelli, Mar{\'{\i}}a and Salvador, Ricardo and Biedma, Marina and Berretta, Marcelo and Haase, Santiago and Sciocco-Cap, Alicia and Ghiringhelli, Pablo and Romanowski, V{\'{\i}}ctor},
  title = {Genome of Epinotia aporema granulovirus ({EpapGV}), a polyorganotropic fast killing betabaculovirus with a novel thymidylate kinase gene},
@@ -748,6 +740,17 @@
  pages = {548},
  url = {https://doi.org/10.1186%2F1471-2164-13-548},
  doi = {10.1186/1471-2164-13-548}
+}
+
+@incollection{Ferrelli_2012a,
+ author = {Ferrelli, M. Leticia and Berretta, F. Marcelo and Bellaich, Mariano and Ghringhelli, Daniel P. and Sciocco-Cap, Alicia and Romanowski, Vctor},
+ title = {The Baculoviral Genome},
+ publisher = {{InTech}},
+ year = {2012},
+ month = {feb},
+ url = {https://doi.org/10.5772%2F32209},
+ doi = {10.5772/32209},
+ booktitle = {Viral Genomes - Molecular Structure, Diversity, Gene Expression Mechanisms and Host-Virus Interactions}
 }
 
 @article{Ferrelli_2018,
@@ -933,6 +936,14 @@
  doi = {10.3390/v7052230}
 }
 
+@phdthesis{Haase_2015a,
+ author = {Haase, Santiago},
+ title = {Desarrollo de herramientas moleculares para incrementar la aplicabilidad del baculovirus de Anticarsia gemmatalis en el control biol{\'{o}}gico de plagas},
+ publisher = {Universidad Nacional de La Plata},
+ url = {https://doi.org/10.35537%2F10915%2F48298},
+ doi = {10.35537/10915/48298}
+}
+
 @article{Harrison_2008,
  author = {Harrison, Robert L. and Puttler, Benjamin and Popham, Holly J. R.},
  title = {Genomic sequence analysis of a fast-killing isolate of Spodoptera frugiperda multiple nucleopolyhedrovirus},
@@ -962,20 +973,6 @@
 }
 
 @article{Harrison_2018,
- author = {Harrison, Robert L. and Herniou, Elisabeth A. and Jehle, Johannes A. and Theilmann, David A. and Burand, John P. and Becnel, James J. and Krell, Peter J. and van Oers, Monique M. and Mowery, Joseph D. and and, Gary R. Bauchan},
- title = {{ICTV} Virus Taxonomy Profile: Baculoviridae},
- journal = {Journal of General Virology},
- publisher = {Microbiology Society},
- year = {2018},
- month = {sep},
- number = {9},
- volume = {99},
- pages = {1185--1186},
- url = {https://doi.org/10.1099%2Fjgv.0.001107},
- doi = {10.1099/jgv.0.001107}
-}
-
-@article{Harrison_2018a,
  author = {Harrison, Robert L. and Herniou, Elisabeth A. and Jehle, Johannes A. and Theilmann, David A. and Burand, John P. and Becnel, James J. and Krell, Peter J. and van Oers, Monique M. and Mowery, Joseph D. and and, Gary R. Bauchan},
  title = {{ICTV} Virus Taxonomy Profile: Baculoviridae},
  journal = {Journal of General Virology},
@@ -1032,6 +1029,7 @@
 @article{Hill_2020,
  author = {Hill, Tom and Unckless, Robert L.},
  title = {Recurrent evolution of two competing haplotypes in an insect DNA virus},
+ journal = {BioRxiv},
  publisher = {Cold Spring Harbor Laboratory},
  year = {2020},
  month = {may},
@@ -1541,17 +1539,6 @@ in China and comparisons with other noctuid larvae in cornfields using molecular
  doi = {10.3390/v8020050}
 }
 
-@incollection{Leticia_2012,
- author = {Leticia, M. and F., Marcelo and N., Mariano and Daniel, P. and Sciocco-Cap, Alicia and Romanowski, Vctor},
- title = {The Baculoviral Genome},
- publisher = {{InTech}},
- year = {2012},
- month = {feb},
- url = {https://doi.org/10.5772%2F32209},
- doi = {10.5772/32209},
- booktitle = {Viral Genomes - Molecular Structure, Diversity, Gene Expression Mechanisms and Host-Virus Interactions}
-}
-
 @article{Li_2009,
  author = {Li, H. and Durbin, R.},
  title = {Fast and accurate short read alignment with Burrows-Wheeler transform},
@@ -1793,7 +1780,7 @@ Spodoptera frugiperda
 
 @article{Montezano_2018,
  author = {Montezano, D. G. and Specht, A. and Sosa-G{\'{o}}mez, D. R. and Roque-Specht, V. F. and Sousa-Silva, J. C. and Paula-Moraes, S. V. and Peterson, J. A. and Hunt, T. E.},
- title = {Host Plants {ofSpodoptera} frugiperda(Lepidoptera: Noctuidae) in the Americas},
+ title = {Host Plants of Spodoptera frugiperda (Lepidoptera: Noctuidae) in the Americas},
  journal = {African Entomology},
  publisher = {Entomological Society of Southern Africa},
  year = {2018},
@@ -1819,8 +1806,8 @@ Spodoptera frugiperda
 }
 
 @article{Moscardi_1999,
- author = {Moscardi, Fl{\'{a}}vio},
- title = {{ASSESSMENT} {OF} {THE} {APPLICATION} {OF} {BACULOVIRUSES} {FOR} {CONTROL} {OF} {LEPIDOPTERA}},
+ author = {Moscardi, Flavio},
+ title = {ASSESSMENT OF THE APPLICATION OF BACULOVIRUSES FOR CONTROL OF LEPIDOPTERA},
  journal = {Annual Review of Entomology},
  publisher = {Annual Reviews},
  year = {1999},
@@ -1845,6 +1832,20 @@ Spodoptera frugiperda
  url = {https://doi.org/10.1371%2Fjournal.pgen.1002764},
  doi = {10.1371/journal.pgen.1002764},
  editor = {Malik, Harmit S.}
+}
+
+@article{Murua_2009,
+ author = {Mur{\'{u}}a, M. Gabriela and Ju{\'{a}}rez, M. Laura and Prieto, Silvina and Gastaminza, Gerardo and Willink, Eduardo},
+ title = {Distribución temporal y espacial de poblaciones larvarias de Spodoptera frugiperda (Smith) (Lep.: Noctuidae) en diferentes hospederos en provincias del norte de la Argentina},
+ journal = {Revista industrial y agricola de Tucuman},
+ publisher = {Scientific Electronic Library Online {SciELO}},
+ year = {2009},
+ month = {sep},
+ number = {1},
+ volume = {86},
+ pages = {e46146},
+ url = {http://ref.scielo.org/ngyz5j},
+ doi = {}
 }
 
 @article{Myers_2015,
@@ -1877,9 +1878,9 @@ Spodoptera frugiperda
 
 @article{Naser_1984,
  author = {Naser, W. L. and Miltenburger, H. G. and Harvey, J. P. and Huber, J. and Huger, A. M.},
- title = {In vitro replication of theCydia pomonella(codling moth) granulosis virus},
- journal = {FEMS Microbiology Letters},
- publisher = {Oxford University Press (OUP)},
+ title = {In vitro replication of the Cydia pomonella(codling moth) granulosis virus},
+ journal = {{FEMS} Microbiology Letters},
+ publisher = {Oxford University Press ({OUP})},
  year = {1984},
  month = {sep},
  number = {1},
@@ -2149,7 +2150,7 @@ Spodoptera frugiperda
 }
 
 @article{Sciocco_Cap_2001,
- author = {Sciocco-Cap, Alicia and Parola, Alejandro D. and Goldberg, Alina V. and Ghiringhelli, Pablo D. and Romanowski, V{\i}{\'}ctor},
+ author = {Sciocco-Cap, Alicia and Parola, Alejandro D. and Goldberg, Alina V. and Ghiringhelli, Pablo D. and Romanowski, Victor},
  title = {Characterization of a Granulovirus Isolated from Epinotia aporema Wals. (Lepidoptera: Tortricidae) Larvae},
  journal = {Applied and Environmental Microbiology},
  publisher = {American Society for Microbiology},
@@ -2541,20 +2542,6 @@ Spodoptera frugiperda
  doi = {10.2174/138945007782151333}
 }
 
-@article{van_Oers_2007a,
- author = {van Oers, Monique and Vlak, Just},
- title = {Baculovirus Genomics},
- journal = {Current Drug Targets},
- publisher = {Bentham Science Publishers Ltd.},
- year = {2007},
- month = {oct},
- number = {10},
- volume = {8},
- pages = {1051--1068},
- url = {https://doi.org/10.2174%2F138945007782151333},
- doi = {10.2174/138945007782151333}
-}
-
 @article{van_Oers_2015,
  author = {van Oers, Monique M. and Pijlman, Gorben P. and Vlak, Just M.},
  title = {Thirty years of baculovirus–insect cell protein expression: from dark horse to mainstream technology},
@@ -2614,7 +2601,7 @@ Spodoptera frugiperda
 
 @article{Villamizar_2009,
  author = {Villamizar, Laura and Barrera, Gloria and Cotes, Alba Marina and Mart{\'{\i}}nez, Fleming},
- title = {Eudragit S100 microparticles {containingSpodoptera} frugiperdanucleopolyehedrovirus: Physicochemical characterization, photostability andin vitrovirus release},
+ title = {Eudragit S100 microparticles containing Spodoptera frugiperda nucleopolyhedrovirus: Physico-chemical characterization, photostability and in vitro virus release},
  journal = {Journal of Microencapsulation},
  publisher = {Informa {UK} Limited},
  year = {2009},
@@ -2670,7 +2657,7 @@ Spodoptera frugiperda
 
 @article{Wang_2011,
  author = {Wang, Xiao-Feng and Zhang, Bao-Qin and Xu, Hai-Jun and Cui, Ying-Jun and Xu, Yi-Peng and Zhang, Min-Juan and Han, Yeon Soo and Lee, Yong Seok and Bao, Yan-Yuan and Zhang, Chuan-Xi},
- title = {{ODV}-Associated Proteins of {thePieris} {rapaeGranulovirus}},
+ title = {ODV-Associated Proteins of the Pieris rapaeGranulovirus},
  journal = {Journal of Proteome Research},
  publisher = {American Chemical Society ({ACS})},
  year = {2011},
