--- a/source/bibliography/bib/Naser_1984.bib
+++ b/source/bibliography/bib/Naser_1984.bib
@@ -1,6 +1,6 @@
 @article{Naser_1984,
  author = {Naser, W. L. and Miltenburger, H. G. and Harvey, J. P. and Huber, J. and Huger, A. M.},
- title = {In vitro replication of {theCydia} pomonella(codling moth) granulosis virus},
+ title = {In vitro replication of the Cydia pomonella(codling moth) granulosis virus},
  journal = {{FEMS} Microbiology Letters},
  publisher = {Oxford University Press ({OUP})},
  year = {1984},
