--- a/source/bibliography/bib/Villamizar_2009.bib
+++ b/source/bibliography/bib/Villamizar_2009.bib
@@ -1,6 +1,6 @@
 @article{Villamizar_2009,
  author = {Villamizar, Laura and Barrera, Gloria and Cotes, Alba Marina and Mart{\'{\i}}nez, Fleming},
- title = {Eudragit S100 microparticles {containingSpodoptera} frugiperdanucleopolyehedrovirus: Physicochemical characterization, photostability andin vitrovirus release},
+ title = {Eudragit S100 microparticles containing Spodoptera frugiperda nucleopolyhedrovirus: Physico-chemical characterization, photostability and in vitro virus release},
  journal = {Journal of Microencapsulation},
  publisher = {Informa {UK} Limited},
  year = {2009},
