Add format to abbrevations section

--- a/source/references.bib
+++ b/source/references.bib
@@ -2135,6 +2135,15 @@ Spodoptera frugiperda
  doi = {10.1007/s11262-014-1113-5}
 }
 
+@book{Rohrmann_2019,
+ author = {Rohrmann, George F.},
+ title = {Baculovirus Molecular Biology 4th edition},
+ publisher = {National Center for Biotechnology Information (US)},
+ year = {2019},
+ url = {https://www.ncbi.nlm.nih.gov/books/NBK543458/},
+ adress = {Bethesda (MD)}
+}
+
 @article{Sayers_2010,
  author = {Sayers, E. W. and Barrett, T. and Benson, D. A. and Bolton, E. and Bryant, S. H. and Canese, K. and Chetvernin, V. and Church, D. M. and DiCuccio, M. and Federhen, S. and Feolo, M. and Fingerman, I. M. and Geer, L. Y. and Helmberg, W. and Kapustin, Y. and Landsman, D. and Lipman, D. J. and Lu, Z. and Madden, T. L. and Madej, T. and Maglott, D. R. and Marchler-Bauer, A. and Miller, V. and Mizrachi, I. and Ostell, J. and Panchenko, A. and Phan, L. and Pruitt, K. D. and Schuler, G. D. and Sequeira, E. and Sherry, S. T. and Shumway, M. and Sirotkin, K. and Slotta, D. and Souvorov, A. and Starchenko, G. and Tatusova, T. A. and Wagner, L. and Wang, Y. and Wilbur, W. J. and Yaschenko, E. and Ye, J.},
  title = {Database resources of the National Center for Biotechnology Information},
