Expanded chapter 3 introduction

--- a/source/references.bib
+++ b/source/references.bib
@@ -111,6 +111,17 @@
  editor = {McFadden, G.}
 }
 
+@incollection{Arike_2014,
+ author = {Arike, Liisa and Peil, Lauri},
+ title = {Spectral Counting Label-Free Proteomics},
+ publisher = {Springer New York},
+ year = {2014},
+ pages = {213--222},
+ url = {https://doi.org/10.1007%2F978-1-4939-0685-7_14},
+ doi = {10.1007/978-1-4939-0685-7_14},
+ booktitle = {Shotgun Proteomics}
+}
+
 @article{Asser_Kaiser_2007,
  author = {Asser-Kaiser, S. and Fritsch, E. and Undorf-Spahn, K. and Kienzle, J. and Eberle, K. E. and Gund, N. A. and Reineke, A. and Zebitz, C. P. W. and Heckel, D. G. and Huber, J. and Jehle, J. A.},
  title = {Rapid Emergence of Baculovirus Resistance in Codling Moth Due to Dominant, Sex-Linked Inheritance},
@@ -972,6 +983,21 @@
  doi = {10.1007/s11262-008-0218-0}
 }
 
+@article{Harrison_2017,
+ author = {Harrison, Robert L. and Rowley, Daniel L. and Mowery, Joseph and Bauchan, Gary R. and Theilmann, David A. and Rohrmann, George F. and Erlandson, Martin A.},
+ title = {The Complete Genome Sequence of a Second Distinct Betabaculovirus from the True Armyworm, Mythimna unipuncta},
+ journal = {PLOS ONE},
+ publisher = {Public Library of Science (PLoS)},
+ year = {2017},
+ month = {jan},
+ number = {1},
+ volume = {12},
+ pages = {e0170510},
+ url = {https://doi.org/10.1371%2Fjournal.pone.0170510},
+ doi = {10.1371/journal.pone.0170510},
+ editor = {Li, Xiu-Qing}
+}
+
 @article{Harrison_2018,
  author = {Harrison, Robert L. and Herniou, Elisabeth A. and Jehle, Johannes A. and Theilmann, David A. and Burand, John P. and Becnel, James J. and Krell, Peter J. and van Oers, Monique M. and Mowery, Joseph D. and and, Gary R. Bauchan},
  title = {{ICTV} Virus Taxonomy Profile: Baculoviridae},
@@ -1735,6 +1761,19 @@ Spodoptera frugiperda
  pages = {325--339},
  url = {https://doi.org/10.1016%2Fj.virol.2007.10.019},
  doi = {10.1016/j.virol.2007.10.019}
+}
+
+@article{Miele_2011,
+ author = {Miele, Solange Ana Belen and Garavaglia, Matías Javier and Belaich, Mariano Nicolás and Ghiringhelli, Pablo Daniel},
+ title = {Baculovirus: Molecular Insights on Their Diversity and Conservation},
+ journal = {International Journal of Evolutionary Biology},
+ publisher = {Hindawi Limited},
+ year = {2011},
+ month = {apr},
+ volume = {2011},
+ pages = {1--15},
+ url = {https://doi.org/10.4061%2F2011%2F379424},
+ doi = {10.4061/2011/379424}
 }
 
 @article{Miller_1978,
