--- a/source/references.bib
+++ b/source/references.bib
@@ -363,6 +363,20 @@
  doi = {10.1016/0003-2697(76)90527-3}
 }
 
+@article{Braunagel_1996,
+ author = {Braunagel, S. C. and He, H. and Ramamurthy, P. and Summers, M. D.},
+ title = {Transcription, Translation, and Cellular Localization of ThreeAutographa californicaNuclear Polyhedrosis Virus Structural Proteins: ODV-E18, ODV-E35, and ODV-EC27},
+ journal = {Virology},
+ publisher = {Elsevier BV},
+ year = {1996},
+ month = {aug},
+ number = {1},
+ volume = {222},
+ pages = {100--114},
+ url = {https://doi.org/10.1006%2Fviro.1996.0401},
+ doi = {10.1006/viro.1996.0401}
+}
+
 @article{Braunagel_2003,
  author = {Braunagel, S. C. and Russell, W. K. and Rosas-Acosta, G. and Russell, D. H. and Summers, M. D.},
  title = {Determination of the protein composition of the occlusion-derived virus of Autographa californica nucleopolyhedrovirus},
@@ -501,6 +515,20 @@
  pages = {617--625},
  url = {https://doi.org/10.1007%2Fs00705-011-1211-9},
  doi = {10.1007/s00705-011-1211-9}
+}
+
+@article{Chen_2015,
+ author = {Chen, Xiulan and Wei, Shasha and Ji, Yanlong and Guo, Xiaojing and Yang, Fuquan},
+ title = {Quantitative proteomics using SILAC: Principles, applications, and developments},
+ journal = {PROTEOMICS},
+ publisher = {Wiley},
+ year = {2015},
+ month = {jul},
+ number = {18},
+ volume = {15},
+ pages = {3175--3192},
+ url = {https://doi.org/10.1002%2Fpmic.201500108},
+ doi = {10.1002/pmic.201500108}
 }
 
 @article{Chen_2018,
@@ -738,6 +766,21 @@
  pages = {1917--1933},
  url = {https://doi.org/10.1099%2Fvir.0.81792-0},
  doi = {10.1099/vir.0.81792-0}
+}
+
+@article{Escasa_2019,
+ author = {Escasa, Shannon R. and Harrison, Robert L. and Mowery, Joseph D. and Bauchan, Gary R. and Cory, Jenny S.},
+ title = {The complete genome sequence of an alphabaculovirus from Spodoptera exempta, an agricultural pest of major economic significance in Africa},
+ journal = {PLOS ONE},
+ publisher = {Public Library of Science (PLoS)},
+ year = {2019},
+ month = {feb},
+ number = {2},
+ volume = {14},
+ pages = {e0209937},
+ url = {https://doi.org/10.1371%2Fjournal.pone.0209937},
+ doi = {10.1371/journal.pone.0209937},
+ editor = {Ehtesham, Hasnain Seyed}
 }
 
 @article{Ferrelli_2012,
@@ -1763,6 +1806,20 @@ Spodoptera frugiperda
  doi = {10.1016/j.virol.2007.10.019}
 }
 
+@article{McCarthy_2008a,
+ author = {McCarthy, Christina B. and Theilmann, David A.},
+ title = {AcMNPV ac143 (odv-e18) is essential for mediating budded virus production and is the 30th baculovirus core gene},
+ journal = {Virology},
+ publisher = {Elsevier BV},
+ year = {2008},
+ month = {may},
+ number = {1},
+ volume = {375},
+ pages = {277--291},
+ url = {https://doi.org/10.1016%2Fj.virol.2008.01.039},
+ doi = {10.1016/j.virol.2008.01.039}
+}
+
 @article{Miele_2011,
  author = {Miele, Solange Ana Belen and Garavaglia, Matías Javier and Belaich, Mariano Nicolás and Ghiringhelli, Pablo Daniel},
  title = {Baculovirus: Molecular Insights on Their Diversity and Conservation},
@@ -2091,6 +2148,20 @@ Spodoptera frugiperda
  booktitle = {Methods in Molecular Biology}
 }
 
+@article{Rauniyar_2014,
+ author = {Rauniyar, Navin and Yates, John R.},
+ title = {Isobaric Labeling-Based Relative Quantification in Shotgun Proteomics},
+ journal = {Journal of Proteome Research},
+ publisher = {American Chemical Society (ACS)},
+ year = {2014},
+ month = {nov},
+ number = {12},
+ volume = {13},
+ pages = {5293--5309},
+ url = {https://doi.org/10.1021%2Fpr500880b},
+ doi = {10.1021/pr500880b}
+}
+
 @article{Rausch_2012,
  author = {Rausch, T. and Zichner, T. and Schlattl, A. and Stutz, A. M. and Benes, V. and Korbel, J. O.},
  title = {DELLY: structural variant discovery by integrated paired-end and split-read analysis},
@@ -2181,6 +2252,20 @@ Spodoptera frugiperda
  year = {2019},
  url = {https://www.ncbi.nlm.nih.gov/books/NBK543458/},
  adress = {Bethesda (MD)}
+}
+
+@article{Salvador_2012,
+ author = {Salvador, Ricardo and Ferrelli, M. Leticia and Berretta, Marcelo F. and Mitsuhashi, Wataru and Biedma, Marina E. and Romanowski, Víctor and Sciocco-Cap, Alicia},
+ title = {Analysis of EpapGV gp37 gene reveals a close relationship between granulovirus and entomopoxvirus},
+ journal = {Virus Genes},
+ publisher = {Springer Science and Business Media LLC},
+ year = {2012},
+ month = {aug},
+ number = {3},
+ volume = {45},
+ pages = {610--613},
+ url = {https://doi.org/10.1007%2Fs11262-012-0800-3},
+ doi = {10.1007/s11262-012-0800-3}
 }
 
 @article{Sayers_2010,
