Added final headers and fixed references headers

--- a/source/preamble.tex
+++ b/source/preamble.tex
@@ -18,7 +18,8 @@
 \usepackage{fancyhdr}
 \pagestyle{fancy}
 \fancyhf{}
-\fancyhead[RO,LE]{Tesis doctoral}
+\fancyhead[LE]{\leftmark}
+\fancyhead[RO]{\rightmark}
 \fancyfoot[CE,CO]{\thepage}
 % Set header ruler to 1pt
 \renewcommand{\headrulewidth}{1pt} 
