Extended chapter 3 discussion

--- a/source/references.bib
+++ b/source/references.bib
@@ -2995,6 +2995,20 @@ Spodoptera frugiperda
  doi = {10.1016/j.virusres.2011.02.014}
 }
 
+@article{Yamamoto_1980,
+ author = {Yamamoto, T. and Tanada, Y.},
+ title = {Physicochemical properties and location of capsule components, in particular the synergistic factor, in the occlusion body of a granulosis virus of the armyworm, Pseudaletia unipuncta},
+ journal = {Virology},
+ publisher = {Elsevier BV},
+ year = {1980},
+ month = {dec},
+ number = {2},
+ volume = {107},
+ pages = {434--440},
+ url = {https://doi.org/10.1016%2F0042-6822%2880%2990310-4},
+ doi = {10.1016/0042-6822(80)90310-4}
+}
+
 @article{Yang_2017,
  author = {Yang, Fei and Kerns, David L and Head, Graham P and Price, Paula and Huang, Fangneng},
  title = {Cross-resistance to purified Bt proteins, Bt corn and Bt cotton in a Cry2Ab2-corn resistant strain of Spodoptera frugiperda},
