Add proteomics chapter revisions

--- a/source/references.bib
+++ b/source/references.bib
@@ -783,6 +783,20 @@
  editor = {Ehtesham, Hasnain Seyed}
 }
 
+@article{Fernandez_Escamilla_2004,
+ author = {Fernandez-Escamilla, Ana-Maria and Rousseau, Frederic and Schymkowitz, Joost and Serrano, Luis},
+ title = {Prediction of sequence-dependent and mutational effects on the aggregation of peptides and proteins},
+ journal = {Nature Biotechnology},
+ publisher = {Springer Science and Business Media LLC},
+ year = {2004},
+ month = {sep},
+ number = {10},
+ volume = {22},
+ pages = {1302--1306},
+ url = {https://doi.org/10.1038%2Fnbt1012},
+ doi = {10.1038/nbt1012}
+}
+
 @article{Ferrelli_2012,
  author = {Ferrelli, Mar{\'{\i}}a and Salvador, Ricardo and Biedma, Marina and Berretta, Marcelo and Haase, Santiago and Sciocco-Cap, Alicia and Ghiringhelli, Pablo and Romanowski, V{\'{\i}}ctor},
  title = {Genome of Epinotia aporema granulovirus ({EpapGV}), a polyorganotropic fast killing betabaculovirus with a novel thymidylate kinase gene},
@@ -1608,6 +1622,20 @@ in China and comparisons with other noctuid larvae in cornfields using molecular
  doi = {10.3390/v8020050}
 }
 
+@article{Li_2002,
+ author = {Li, Y.},
+ title = {The mitotic spindle is required for loading of the DASH complex onto the kinetochore},
+ journal = {Genes & Development},
+ publisher = {Cold Spring Harbor Laboratory},
+ year = {2002},
+ month = {jan},
+ number = {2},
+ volume = {16},
+ pages = {183--197},
+ url = {https://doi.org/10.1101%2Fgad.959402},
+ doi = {10.1101/gad.959402}
+}
+
 @article{Li_2009,
  author = {Li, H. and Durbin, R.},
  title = {Fast and accurate short read alignment with Burrows-Wheeler transform},
@@ -1678,6 +1706,20 @@ Spodoptera frugiperda
  pages = {2674--2680},
  url = {https://doi.org/10.1002%2Fps.5812},
  doi = {10.1002/ps.5812}
+}
+
+@article{Liu_2019,
+ author = {Liu, Xiangyang and Fang, Wei and Fan, Rui and Zhang, Linna and Lei, Chengfeng and Zhang, Jingjing and Nian, Wenkai and Dou, Tao and An, Shiheng and Zhou, Lin and Sun, Xiulian},
+ title = {Granulovirus GP37 Facilitated ODVs Cross Insect Peritrophic Membranes and Fuse with Epithelia},
+ journal = {Toxins},
+ publisher = {MDPI AG},
+ year = {2019},
+ month = {mar},
+ number = {3},
+ volume = {11},
+ pages = {145},
+ url = {https://doi.org/10.3390%2Ftoxins11030145},
+ doi = {10.3390/toxins11030145}
 }
 
 @article{Loiseau_2020,
@@ -1970,6 +2012,19 @@ Spodoptera frugiperda
  pages = {6409--6418},
  url = {https://doi.org/10.1128%2Fjvi.00490-08},
  doi = {10.1128/jvi.00490-08}
+}
+
+@article{Nan_2019,
+ author = {Nan, Hao and Chen, Hongying and Tuite, Mick F. and Xu, Xiaodong},
+ title = {A viral expression factor behaves as a prion},
+ journal = {Nature Communications},
+ publisher = {Springer Science and Business Media LLC},
+ year = {2019},
+ month = {jan},
+ number = {1},
+ volume = {10},
+ url = {https://doi.org/10.1038%2Fs41467-018-08180-z},
+ doi = {10.1038/s41467-018-08180-z}
 }
 
 @article{Naser_1984,
@@ -2897,6 +2952,20 @@ Spodoptera frugiperda
  pages = {227},
  url = {https://doi.org/10.3390%2Fv9080227},
  doi = {10.3390/v9080227}
+}
+
+@article{Westermann_2005,
+ author = {Westermann, Stefan and Avila-Sakar, Agustin and Wang, Hong-Wei and Niederstrasser, Hanspeter and Wong, Jonathan and Drubin, David G. and Nogales, Eva and Barnes, Georjana},
+ title = {Formation of a Dynamic Kinetochore- Microtubule Interface through Assembly of the Dam1 Ring Complex},
+ journal = {Molecular Cell},
+ publisher = {Elsevier BV},
+ year = {2005},
+ month = {jan},
+ number = {2},
+ volume = {17},
+ pages = {277--290},
+ url = {https://doi.org/10.1016%2Fj.molcel.2004.12.019},
+ doi = {10.1016/j.molcel.2004.12.019}
 }
 
 @article{Williams_2017,
