Add introduction and chapter 2 revisions. Also add qpcr datasets

--- a/source/references.bib
+++ b/source/references.bib
@@ -849,6 +849,20 @@
  doi = {10.1016/j.jbiotec.2018.07.044}
 }
 
+@article{G_mez_2013,
+ author = {Gomez, Juliana and Guevara, Judith and Cuartas, Paola and Espinel, Carlos and Villamizar, Laura},
+ title = {Microencapsulated Spodoptera frugiperda nucleopolyhedrovirus: insecticidal activity and effect on arthropod populations in maize},
+ journal = {Biocontrol Science and Technology},
+ publisher = {Informa UK Limited},
+ year = {2013},
+ month = {jul},
+ number = {7},
+ volume = {23},
+ pages = {829--846},
+ url = {https://doi.org/10.1080%2F09583157.2013.802288},
+ doi = {10.1080/09583157.2013.802288}
+}
+
 @article{Garavaglia_2012,
  author = {Garavaglia, M. J. and Miele, S. A. B. and Iserte, J. A. and Belaich, M. N. and Ghiringhelli, P. D.},
  title = {The ac53, ac78, ac101, and ac103 Genes Are Newly Discovered Core Genes in the Family Baculoviridae},
@@ -1002,6 +1016,14 @@
  pages = {2230--2267},
  url = {https://doi.org/10.3390%2Fv7052230},
  doi = {10.3390/v7052230}
+}
+
+@phdthesis{Haase_2015_tesis,
+ author = {Haase, Santiago},
+ title = {Desarrollo de herramientas moleculares para incrementar la aplicabilidad del baculovirus de Anticarsia gemmatalis en el control biol{\'{o}}gico de plagas},
+ publisher = {Universidad Nacional de La Plata},
+ url = {https://doi.org/10.35537%2F10915%2F48298},
+ doi = {10.35537/10915/48298}
 }
 
 @phdthesis{Haase_2015a,
@@ -1204,6 +1226,20 @@ Cry1F corn in the Americas: lessons and implications for Bt corn {IRM} in China}
  month = {jun},
  url = {https://doi.org/10.1111%2F1744-7917.12826},
  doi = {10.1111/1744-7917.12826}
+}
+
+@article{Hutchison_2010,
+ author = {Hutchison, W. D. and Burkness, E. C. and Mitchell, P. D. and Moon, R. D. and Leslie, T. W. and Fleischer, S. J. and Abrahamson, M. and Hamilton, K. L. and Steffey, K. L. and Gray, M. E. and Hellmich, R. L. and Kaster, L. V. and Hunt, T. E. and Wright, R. J. and Pecinovsky, K. and Rabaey, T. L. and Flood, B. R. and Raun, E. S.},
+ title = {Areawide Suppression of European Corn Borer with Bt Maize Reaps Savings to Non-Bt Maize Growers},
+ journal = {Science},
+ publisher = {American Association for the Advancement of Science (AAAS)},
+ year = {2010},
+ month = {oct},
+ number = {6001},
+ volume = {330},
+ pages = {222--225},
+ url = {https://doi.org/10.1126%2Fscience.1190242},
+ doi = {10.1126/science.1190242}
 }
 
 @article{Ishihama_2005,
@@ -2801,6 +2837,20 @@ Spodoptera frugiperda
  doi = {10.3109/02652040903191826}
 }
 
+@article{Wan_2017,
+ author = {Wan, Peng and Xu, Dong and Cong, Shengbo and Jiang, Yuying and Huang, Yunxin and Wang, Jintao and Wu, Huaiheng and Wang, Ling and Wu, Kongming and Carrière, Yves and Mathias, Andrea and Li, Xianchun and Tabashnik, Bruce E.},
+ title = {Hybridizing transgenic Bt cotton with non-Bt cotton counters resistance in pink bollworm},
+ journal = {Proceedings of the National Academy of Sciences},
+ publisher = {Proceedings of the National Academy of Sciences},
+ year = {2017},
+ month = {may},
+ number = {21},
+ volume = {114},
+ pages = {5413--5418},
+ url = {https://doi.org/10.1073%2Fpnas.1700396114},
+ doi = {10.1073/pnas.1700396114}
+}
+
 @article{Wang_1997,
  author = {Wang, P. and Granados, R. R.},
  title = {An intestinal mucin is the target substrate for a baculovirus enhancin},
@@ -3036,6 +3086,20 @@ Spodoptera frugiperda
  doi = {10.1099/0022-1317-74-1-103}
 }
 
+@article{Wu_2008,
+ author = {Wu, K. -M. and Lu, Y. -H. and Feng, H. -Q. and Jiang, Y. -Y. and Zhao, J. -Z.},
+ title = {Suppression of Cotton Bollworm in Multiple Crops in China in Areas with Bt Toxin-Containing Cotton},
+ journal = {Science},
+ publisher = {American Association for the Advancement of Science (AAAS)},
+ year = {2008},
+ month = {sep},
+ number = {5896},
+ volume = {321},
+ pages = {1676--1678},
+ url = {https://doi.org/10.1126%2Fscience.1160550},
+ doi = {10.1126/science.1160550}
+}
+
 @article{Wu_2010,
  author = {Wu, Wenbi and Passarelli, A. Lorena},
  title = {Autographa californica Multiple Nucleopolyhedrovirus Ac92 (ORF92, P33) Is Required for Budded Virus Production and Multiply Enveloped Occlusion-Derived Virus Formation},
@@ -3132,6 +3196,20 @@ Spodoptera frugiperda
  pages = {11664--11674},
  url = {https://doi.org/10.1128%2Fjvi.05275-11},
  doi = {10.1128/jvi.05275-11}
+}
+
+@article{Zamora_Avil_s_2013,
+ author = {Zamora-Avilés, N. and Alonso-Vargas, J. and Pineda, S. and Isaac-Figueroa, J. and Lobit, P. and Martínez-Castillo, A. M.},
+ title = {Effects of a nucleopolyhedrovirus in mixtures with azadirachtin onSpodoptera frugiperda(J. E. Smith) (Lepidoptera: Noctuidae) larvae and viral occlusion body production},
+ journal = {Biocontrol Science and Technology},
+ publisher = {Informa UK Limited},
+ year = {2013},
+ month = {may},
+ number = {5},
+ volume = {23},
+ pages = {521--534},
+ url = {https://doi.org/10.1080%2F09583157.2013.788133},
+ doi = {10.1080/09583157.2013.788133}
 }
 
 @article{Zhang_2015,
